# buspirate-mcp

./: .gitignore  .gitmodules  .mcp.json.example  CLAUDE.md  README.md  pyproject.toml
src/buspirate_mcp/: __init__.py  __main__.py  hardware.py  la.py  la_parsers.py  safety.py  server.py  session.py  tools.py
tests/: conftest.py  test_hardware.py  test_la.py  test_la_parsers.py  test_safety.py  test_server_dispatch.py  test_session.py  test_tools.py
